# kurtosis

./: .envrc  .gitignore  .golangci.yml  .pre-release-scripts.txt  .release-please-manifest.json  .tool-versions  2d  :w  BUILD_AND_USE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MAINTAINERS.md  README.md  args.json  args.yml  buildkitd.toml  flake.nix  funding.json  go.work  go.work.sum  images.py  kurtosis_version.txt  logs.sh  main.star  make-cluster.sh  package-lock.json  package.json  package.nix  protobuf2swagger.config.js  release-please-config.json  run.sh  run.star  run_parallel_enclave.sh  run_streamed.sh  shell.nix  stream.sh  test.sh  test.star  (+3 more)
.circleci/: config.yml  new-config.yml  original_config.yml
.github/: breaking_change_description.py  breaking_change_title.py  dependabot.yml  issue-labeler.yml  prune_old_docs.py  pull_request_template.md  remove_trailing_space.py
.run/: APIC-remote-debug.run.xml  CLI-remote-debug.run.xml  Engine-Docker-remote-debug.run.xml  Engine-remote-debug.run.xml
api/rust/: Cargo.toml  README.md  build.rs
api/rust/scripts/: build.sh
api/rust/src/: api_container_api.rs  engine_api.rs  lib.rs
benchmark/: apic_benchmark.go  benchmark.csv  benchmark.go  cli_benchmark.go  container_engine_lib_benchmark.go  go.mod  startosis_benchmark.csv
cli/: .gitignore  .goreleaser.yml  .pre-release-scripts.txt  README.md  go.mod  go.sum  supported-languages.txt
cloud/: README.md
common/: go.mod
connect-go-server/: buf.gen.yaml  go.mod  go.sum
connect-server/: README.md  go.mod  go.sum  server.go
core/: LICENSE  (+17 more)
(+5433 files in other folders)
