[package]
name = "kurtosis-sdk"
version = "0.0.0"
license = "Kurtosis Business Source License 1.1 https://github.com/kurtosis-tech/kurtosis/blob/main/LICENSE.md"
description = "Rust SDK for Kurtosis"
edition = "2021"
readme = "README.md"
homepage = "https://kurtosis.com"
repository = "https://github.com/kurtosis-tech/kurtosis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"


[build-dependencies]
tonic-build = "0.9.2"
